--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "feather-icons": "^4.5.0"
   }
 }
